Fix overflow-x

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -9,8 +9,7 @@ body {
 
 html, body {
   max-width: 100vw;
-  overflow-x: auto;
-  margin: 0;
+  overflow-x: hidden;
 }
 
 .material-icons {
